trunk/Source/include/ODEImport.hpp


//-- type declarations -------------------------------------------------------
typedef int TJointFlag;


typedef int TdContactType;


typedef float TdReal;


typedef float *PdReal;


typedef System::StaticArray<float, 4> TdVector3;


typedef TdVector3 *PdVector3;


typedef System::StaticArray<float, 12> TdMatrix3;


typedef TdMatrix3 *PdMatrix3;


typedef System::StaticArray<float, 6> TdAABB;


struct DECLSPEC_DRECORD TdxAutoDisable
{
public:
	float idle_time;
	int idle_steps;
	float linear_average_threashold;
	float angular_average_threashold;
	unsigned average_samples;
};



struct DECLSPEC_DRECORD TdxDampingParameters
{
public:
	float linear_scale;
	float angular_scale;
	float linear_threahold;
	float angular_threashold;
};



struct DECLSPEC_DRECORD TdxContactParameters
{
public:
	float max_vel;
	float min_depth;
};



struct DECLSPEC_DRECORD TdxQuickStepParameters
{
public:
	int num_iterations;
	float w;
};



struct TdxGeom;

typedef TdxGeom *PdxGeom;


struct TdxWorld;



struct TdxBody;

typedef TdxBody *PdxBody;


struct TdxJoint;

typedef TdxJoint *PdxJoint;


typedef PdxJoint TdJointID;



struct DECLSPEC_DRECORD TdxJoint
{
public:
	TdObject baseObject;
	TJointInfo1 Info1;
	TJointInfo2 Info2;
};



struct DECLSPEC_DRECORD TdxPosR
{
public:
	TdVector3 pos;
	TdMatrix3 R;
};


struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject BaseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};



class DELPHICLASS TBodyList;

struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};



struct DECLSPEC_DRECORD TdJointFeedback
{
public:
	TdVector3 f1;
	TdVector3 t1;
	TdVector3 f2;
	TdVector3 t2;
};


enum TdErrorType : unsigned char { d_ERR_UNKNOWN, d_ERR_IASSERT, d_ERR_UASSERT, d_ERR_LCP };


enum TdJointTypeNumbers : unsigned char { dJointTypeNone, dJointTypeBall, dJointTypeHinge, dJointTypeSlider, dJointTypeContact, dJointTypeUniversal, dJointTypeHinge2, dJointTypeFixed, dJointTypeNull, dJointTypeAMotor, dJointTypeLMotor, dJointTypePlane2D, dJointTypePR, dJointTypePU, dJointTypePiston };


enum TdAngularMotorModeNumbers : unsigned char { dAMotorUser, dAMotorEuler };


struct DECLSPEC_DRECORD TdSurfaceParameters
{
public:
	int mode;
	float mu;
	float mu2;
	float bounce;
	float bounce_vel;
	float soft_erp;
	float soft_cfm;
	float motion1;
	float motion2;
	float motionN;
	float slip1;
	float slip2;
};



struct DECLSPEC_DRECORD TdContactGeom
{
public:
	TdVector3 pos;
	TdVector3 normal;
	float depth;
	TdxGeom *g1;
	TdxGeom *g2;
	int side1;
	int side2;
};



typedef TdContactGeom *PdContactGeom;


struct DECLSPEC_DRECORD TdContact
{
public:
	TdSurfaceParameters surface;
	TdContactGeom geom;
	TdVector3 fdir1;
};


typedef void __cdecl (*TdNearCallback)(void * data, PdxGeom o1, PdxGeom o2);


typedef int __cdecl (*TdColliderFn)(PdxGeom o1, PdxGeom o2, int flags, PdContactGeom contact, int skip);


typedef TdColliderFn __cdecl (*TdGetColliderFnFn)(int num);


typedef void __cdecl (*TdGetAABBFn)(PdxGeom g, float *aabb);


typedef void __cdecl (*TdGeomDtorFn)(PdxGeom o);


typedef int __cdecl (*TdAABBTestFn)(PdxGeom o1, PdxGeom o2, float const *aabb2);


struct DECLSPEC_DRECORD TdGeomClass
{
public:
	int bytes;
	TdGetColliderFnFn collider;
	TdGetAABBFn aabb;
	TdAABBTestFn aabb_test;
	TdGeomDtorFn dtor;
};



typedef TdGeomClass *PdGeomClass;


struct TdxSpace;

typedef TdxSpace *PdxSpace;


struct DECLSPEC_DRECORD TdxTriMeshData
{
public:
	System::Byte unknown;
};



typedef TdxTriMeshData *PdxTriMeshData;


typedef TdxSpace *PdxSimpleSpace;


struct TdxHashSpace;

typedef TdxHashSpace *PdxHashSpace;


struct DECLSPEC_DRECORD TdGeomSpaceData
{
public:
	TdxGeom *next;
};



struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *Body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};

struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};



typedef TdxSpace TdxSimpleSpace;


struct DECLSPEC_DRECORD TdxHashSpace
{
public:
	TdxSpace BaseSpace;
	int global_minlevel;
	int global_maxlevel;
};

extern PACKAGE int dJOINT_INGROUP;

extern PACKAGE int dJOINT_REVERSE;

extern PACKAGE int dJOINT_TWOBODIES;

extern PACKAGE int dContactMu2;

extern PACKAGE int dContactFDir1;

extern PACKAGE int dContactBounce;

extern PACKAGE int dContactSoftERP;

extern PACKAGE int dContactSoftCFM;

extern PACKAGE int dContactMotion1;

extern PACKAGE int dContactMotion2;

extern PACKAGE int dContactSlip1;

extern PACKAGE int dContactSlip2;

extern PACKAGE int dContactApprox0;

extern PACKAGE int dContactApprox1_1;

extern PACKAGE int dContactApprox1_2;

extern PACKAGE int dContactApprox1;

extern "C" void __cdecl dSpaceCollide(const PdxSpace Space, void * data, TdNearCallback callback);